--- a/index.html
+++ b/index.html
@@ -22,15 +22,9 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Project</li>
-        <li>Kontakt</li>
-      </ul>
-    </nav>
+  <header class="text-center">
+    <h1>GULP Test</h1>
+    <p>Hallo Hallo, it is a test with gulp, node.js, bower, and sass</p>
   </header>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
