--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 </head>
 
 <body>
-  <header class="text-center">
-    <h1>GULP Test</h1>
-    <p>Hallo, it is a test with gulp, node.js, bower, and sass</p>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h1>GULP Test</h1>
+          <p>Hallo, it is a test with gulp, node.js, bower, and sass</p>
+        </div>
+      </div>
+    </div>
   </header>
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
