changed style.scsss and index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
   <!-- Bootstrap -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" href="bower_components/font-awesome/scss/font-awesome.scss">
 </head>
 
 <body>
@@ -17,9 +16,19 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1>GULP Test</h1>
-          <p>Hallo, it is a test with gulp, node.js, bower, and sass</p>
+          <h1>GULP.js</h1>
+          <p>Hallo, it is a test with gulp.js, node.js, bower, and sass</p>
         </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6 box text-center">
+          <img class="img-responsive" src="gulp.png" alt="gulp" width="89" height="109.42">
+          <h2>Minifizierung von Javascript, CSS und HTML, verlustlose Optimierung von Bildern oder die Kompilierung von Sass-Dateien</h2>
+        </div>
+        <div class="col-lg-3"></div>
       </div>
     </div>
   </header>
