--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h1>GULP.js</h1>
-          <p>Hallo, it is a test with gulp.js, node.js, bower, and sass</p>
+          <p>Hi, it is a workflow test with gulp.js, node.js, bower, and sass</p>
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 box text-center">
-          <img class="img-responsive" src="gulp.png" alt="gulp" width="89" height="109.42">
-          <h2>Minifizierung von Javascript, CSS und HTML, verlustlose Optimierung von Bildern oder die Kompilierung von Sass-Dateien</h2>
+        <div class="col-lg-3 col-xs-0"></div>
+        <div class="col-lg-6 col-xs-12 box text-center">
+          <img class="img-responsive img-center" src="gulp.png" alt="gulp" width="89" height="109.42">
+          <h3>Minification of Javascript, CSS and HTML, lossless optimization of images or the compilation of Sass files</h3>
         </div>
-        <div class="col-lg-3"></div>
+        <div class="col-lg-3 col-xs-0"></div>
       </div>
     </div>
   </header>
