--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 col-xs-0"></div>
-        <div class="col-lg-6 col-xs-12 box text-center">
-          <img class="img-responsive img-center" src="gulp.png" alt="gulp" width="89" height="109.42">
+        <div class="col-lg-3 "></div>
+        <div class="col-lg-6  text-center box">
+          <img class="img-responsive img-center" src="src/images/gulp.png" alt="gulp" width="89" height="109.42">
           <h3>Minification of Javascript, CSS and HTML, lossless optimization of images or the compilation of Sass files</h3>
         </div>
-        <div class="col-lg-3 col-xs-0"></div>
+        <div class="col-lg-3 "></div>
       </div>
     </div>
   </header>
